--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,9 @@
 
 <!-- JS (TOUJOURS EN DERNIER) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="{{ url_for('static', filename='js/chat_widget.js') }}"></script>
+
+<!-- ✅ CHEMIN CORRIGÉ ICI -->
+<script src="{{ url_for('static', filename='chat_widget.js') }}"></script>
 
 </body>
 </html>
